# test-static-aarch64

./: Cargo.toml  Makefile
src/: main.rs
