[package]
name = "test-static-aarch64"
version = "0.1.0"
authors = ["cb4b1fd915"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
reqwest = { version = "0.11", features = ["blocking"] }
