[package]
name = "test-static-aarch64"
version = "0.1.0"
authors = ["cb4b1fd915"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
[dependencies.reqwest]
default-features = false
version = "0.11" 
features=["rustls-tls", "blocking"] 

